small updates to description

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,6 +30,7 @@ You can install the development version of blingr from [GitHub](https://github.c
 # install.packages("remotes")
 remotes::install_github("usaid-mozambique/blingr", repos = c('https://usaid-mozambique.r-universe.dev', 'https://cloud.r-project.org')
 
+#Load the package
 library(blingr)
 
 #List all functions in package
